# theChat

./: .gitmodules  README.md
FrontEnd/: hello.js  local.properties  pubspec.yaml  settings.gradle
FrontEnd/android/: .gitignore  build.gradle  settings.gradle
FrontEnd/android/app/: build.gradle  google-services.json
FrontEnd/android/app/src/main/: AndroidManifest.xml
FrontEnd/android/app/src/main/cpp/: CMakeLists.txt  main.cpp
FrontEnd/android/app/src/main/cpp/src/: CameraEngine.cpp  CameraEngine.h
FrontEnd/android/app/src/main/cpp/src/CppFiles/: CameraEngine.cpp  DartNotifyHandler.cpp  ImageListener.cpp  ImageListenerJPEG.cpp  ImageListenerYUV.cpp
FrontEnd/android/sdk/: build.gradle
FrontEnd/lib/: CommonStyle.dart  DependentPlugins.dart  main.dart  serverUrl.dart
FrontEnd/lib/businesslogic/UserData/: UserBloc.dart  UserCubit.dart  UserDataModel.dart  UserData_cubit.dart  UserData_state.dart
FrontEnd/lib/businesslogic/socket/: SocketCubit.dart  SocketFunctions.dart  socket_cubit.dart  socket_state.dart
FrontEnd/lib/businesslogic/socket/socketFunctions/: addFriend.dart  message.dart
FrontEnd/lib/constants/: Constants.dart  statuscode.dart
FrontEnd/lib/src/ChatRoom/: ChatRoom.dart
FrontEnd/lib/src/ChatRoom/TextChat/: TextChat.dart
FrontEnd/lib/src/ChatRoom/TextChat/Control/: TextChatControl.dart
FrontEnd/lib/src/ChatRoom/TextChat/Widgets/: MessageSender.dart  MessageTextField.dart  Messages.dart  SendButton.dart  TextChatAppBar.dart  iconofmic.dart  sendmsg.dart  (+1 more)
FrontEnd/lib/src/ChatRoom/VideoChat/: VideoChat.dart
FrontEnd/lib/src/Clippers/: MessageClipper.dart
FrontEnd/lib/src/Editprofile/: Editprofile.dart
FrontEnd/lib/src/Editprofile/Control/: EditControl.dart
FrontEnd/lib/src/Editprofile/Widgets/: CircleAvatarImage.dart  TextFieldOfEdit.dart
FrontEnd/lib/src/Home/: Home.dart
FrontEnd/lib/src/Home/Control/: HomeControl.dart
FrontEnd/lib/src/Home/Widgets/: Avatar.dart  CustomDrawer.dart  FloatingButton.dart  HomeAppBar.dart  MessageRoomInfo.dart  MessageRoomsLayout.dart  SelectFromGallaryOrCamera.dart
FrontEnd/lib/src/PoseDetector/: PoseDetector.dart
FrontEnd/lib/src/PoseDetector/Painters/: coordinates_translator.dart  pose_painter.dart
FrontEnd/lib/src/PoseDetector/Widgets/: camera_view.dart
FrontEnd/lib/src/QRcodes/: Qrcode.dart
FrontEnd/lib/src/QRcodes/createQR/: CreateQR.dart
FrontEnd/lib/src/QRcodes/readQR/: readQr.dart
FrontEnd/lib/src/Registration/: Registration.dart
FrontEnd/lib/src/Registration/CommonWidgets/: Logo.dart  RegistrationButton.dart  TextButtonWidget.dart  TextFieldWidget.dart
FrontEnd/lib/src/Registration/SignIn/: SignIn.dart
FrontEnd/lib/src/Registration/SignUp/: SignUp.dart
FrontEnd/lib/src/SplashScreen/: SpashScreen.dart
backend/: .gitignore  constants.js  index.js  package-lock.json  package.json  socket.js
backend/logic/: SaveImageLogic.js  auth_logic.js  edit_logic.js
backend/logic/authFunctions/: addFriend.js  checkEmail.js  signin.js  signup.js
backend/logic/editFunctions/: edituserdata.js
backend/middleware/: verify_admin.js  verify_user.js
backend/model/: auth_model.js  edit_model.js
backend/route/: SaveImage.js  auth_route.js  edit_route.js
backend/socketFuntions/: addFriend.js  messages.js
(+18 files in other folders)
